sampler/chain/projects/jadx/selected.txt
/home/nima/Developer/AutoFixer/Evaluation/Projects/jadx/jadx-core/src/main/java/jadx/core/dex/visitors/regions/LoopRegionVisitor.java:170: error: [NullAway] (INDEX= 477) (Covered) returning @Nullable expression from method with @NonNull return type
			return null;
			^
	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/jadx/jadx-core/src/main/java/jadx/core/dex/visitors/regions/RegionMaker.java:839: error: [NullAway] (INDEX= 514) (Covered) returning @Nullable expression from method with @NonNull return type
		return out;
		^
	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/jadx/jadx-core/src/main/java/jadx/core/dex/visitors/PrepareForCodeGen.java:258: error: [NullAway] (INDEX= 395) (Covered) returning @Nullable expression from method with @NonNull return type
		return null;
		^
	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/jadx/jadx-core/src/main/java/jadx/core/dex/visitors/EnumVisitor.java:351: error: [NullAway] (INDEX= 344) (Covered) returning @Nullable expression from method with @NonNull return type
			return null;
			^
	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/jadx/jadx-core/src/main/java/jadx/core/dex/instructions/args/SSAVar.java:144: error: [NullAway] (INDEX= 168) (Covered) assigning @Nullable expression to @NonNull field
		this.usedInPhi = null;
		               ^
	(see http://t.uber.com/nullaway )
